@@ -73,6 +73,9 @@ Command
 - `npm run verify:360:harness` (replay + forced-exception corridor validation)
 - Fault-injection check (optional): `WEFTEND_360_FORCE_EXCEPTION=1 node scripts/verify_360.js`
   - Expected: exit 1 with fail receipt/report written and no `latest.txt` advance.
+- Optional output root override for isolated runs:
+  - `WEFTEND_360_OUT_ROOT=<path>`
+  - useful for isolated harness/testing lanes without touching default `out/verify_360`.
 
 Output evidence
 - `out/verify_360/history/run_<seq>/verify_360_receipt.json`
